[tool.poetry]
name = "gerador-de-email"
version = "0.1.0"
description = "Gerador de dados falsos"
authors = ["Los-had"]

[tool.poetry.dependencies]
python = "^3.8"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
